--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="./src/output.css">
 </head>
 <body>
-    
+    <div class="bg-[url(bg1.png)] lg:w-full lg:h-175 h-200 relative bg-no-repeat bg-cover">
+        <div class=" absolute bg-[url(bg2.png)] md:w-full lg:w-full lg:h-175 h-200 ">
+            <div class="max-w-300 m-auto w-[90%] lg:text-start text-center">
+                <div class="text-white flex justify-between items-center py-10">
+                    <div><img src="./src/INNOMA.VC.png" alt=""></div>
+                    <div class="lg:flex hidden md:flex md:gap-10 items-center gap-15">
+                        <p>Кто мы?</p>
+                        <p>Услуги</p>
+                        <p>Акселератор</p>
+                        <p>Новости</p>
+                    </div>
+                    <div class="flex gap-3">
+                        <button class="bg-[#07AF91] text-white py-2 px-5 lg:px-10 rounded-sm">Войти</button>
+                        <div class="lg:hidden md:hidden block"><img src="./src/Group 929.png" alt=""></div>
+                    </div>
+                </div>
+
+                <div class="text-white flex flex-col gap-5 mt-25">
+                    <div>
+                        <h1 class="text-[50px] font-bold">Запустите </h1>
+                        <h1 class="lg:text-[50px] text-[30px] bg-[#07AF91] lg:m-0 md:m-auto w-fit px-3 font-bold">технологический IT-бизнес</h1>
+                        <h1 class="lg:text-[50px] text-[30px] font-bold">на международных рынках</h1>
+                    </div>
+
+                    <h2 class="text-[30px]">Открыт набор заявок на акселератор</h2>
+
+                    <div><button class="bg-[#157BB5] py-4 rounded-2xl px-10">Подать заявку</button></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
