--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./src/output.css">
 </head>
+
 <body>
     <div class="bg-[url(bg1.png)] lg:w-full lg:h-175 h-200 relative bg-no-repeat bg-cover">
         <div class=" absolute bg-[url(bg2.png)] md:w-full lg:w-full lg:h-175 h-200 ">
@@ -27,7 +29,8 @@
                 <div class="text-white flex flex-col gap-5 mt-25">
                     <div>
                         <h1 class="text-[50px] font-bold">Запустите </h1>
-                        <h1 class="lg:text-[50px] text-[30px] bg-[#07AF91] lg:m-0 md:m-auto w-fit px-3 font-bold">технологический IT-бизнес</h1>
+                        <h1 class="lg:text-[50px] text-[30px] bg-[#07AF91] lg:m-0 md:m-auto w-fit px-3 font-bold">
+                            технологический IT-бизнес</h1>
                         <h1 class="lg:text-[50px] text-[30px] font-bold">на международных рынках</h1>
                     </div>
 
@@ -39,5 +42,56 @@
             </div>
         </div>
     </div>
+
+    <div class="max-w-300 m-auto w-[90%] py-20">
+        <div class="lg:text-start text-center">
+            <h1 class="text-[50px] text-[#1178B2]">Наши услуги</h1>
+        </div>
+
+        <div class="lg:flex lg:flex-row flex flex-col-reverse lg:text-start text-center justify-between items-center mt-10">
+            <div class="flex flex-col gap-4">
+                <h1 class="font-bold   text-[#1178B2]">Аналитические исследования</h1>
+                <div class="flex flex-col gap-2">
+                    <p class="lg:w-110">Одним из наших ключевых направлений является анализ технологических трендов
+                        на международных рынках.</p>
+                    <p class="lg:w-140">Мы проводим анализ на основе публичных исследований McKinsey, BCG, PWC,
+                        Deloitte, Accenture, BCG, EY, Crunchbase, Dealroom, F6S, PitchBook а также агрегируем и
+                        анализируем данные из открытых международных источников патенты, медиа, научные публикации
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./src/kisspng-competitor-analysis-market-research-marketing-quan-5b102810d85456 1.png" alt="">
+            </div>
+        </div>
+
+        <div class="lg:text-start text-center lg:mt-0 mt-5">
+            <button class="bg-[#07AF91] text-white py-3 px-20 rounded-sm">Узнать подробнее</button>
+        </div>
+
+        <div>
+            <div
+                class="lg:flex lg:flex-row-reverse lg:mt-25 flex flex-col-reverse lg:text-start text-center justify-between items-center mt-3">
+                <div class="flex flex-col gap-4">
+                    <h1 class="font-bold   text-[#1178B2]">Онлайн акселератор для IT бизнеса</h1>
+                    <div class="flex flex-col gap-2">
+                        <p class="lg:w-140">Онлайн программа аскелерации IT бизнеса позволит вашей команде открыть новые
+                            горизонты и возможности для бизнеса на глобальных рынках. В результате программы вы получите
+                            возможность презентовать свой проект для международных инвесторов и локальных партнеров</p>
+                    </div>
+                    <div class="lg:text-start text-center lg:mt-5 mt-5">
+                        <button class="bg-[#07AF91] text-white py-3 px-20 rounded-sm">Узнать подробнее</button>
+                    </div>
+                </div>
+
+                <div class="lg:py-0 py-5 lg:mt-0 mt-5">
+                    <img src="./src/rocket 1.png"
+                        alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
