--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <h1 class="text-[50px] text-[#1178B2]">Наши услуги</h1>
         </div>
 
-        <div class="lg:flex lg:flex-row flex flex-col-reverse lg:text-start text-center justify-between items-center mt-10">
+        <div
+            class="lg:flex lg:flex-row flex flex-col-reverse lg:text-start text-center justify-between items-center mt-10">
             <div class="flex flex-col gap-4">
                 <h1 class="font-bold   text-[#1178B2]">Аналитические исследования</h1>
                 <div class="flex flex-col gap-2">
@@ -86,9 +87,39 @@
                 </div>
 
                 <div class="lg:py-0 py-5 lg:mt-0 mt-5">
-                    <img src="./src/rocket 1.png"
-                        alt="">
+                    <img src="./src/rocket 1.png" alt="">
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="max-w-300 m-auto w-[90%]">
+        <div>
+            <h1 class="text-[50px] font-bold text-[#1178B2]">Для кого мы?</h1>
+        </div>
+
+        <div class="lg:flex lg:flex-row flex flex-col justify-center gap-10 my-10">
+            <div class="md:flex md:gap-5 md:flex-row lg:gap-10 gap-10  flex flex-col">
+                <div class="border-2 border-gray-200 w-fit text-center p-5 flex flex-col gap-3">
+                    <h1 class="text-[50px] text-[#88BBD8] font-bold">01</h1>
+                    <p class="font-bold">IT проекты на стадии идеи</p>
+                    <p class="lg:w-70">Для стартапов, которые планируют привлечь международные инвестиции,
+                        протестировать спрос и запустить продукт</p>
+                </div>
+
+                <div class="border-2 border-gray-200 w-fit text-center p-5 flex flex-col gap-3">
+                    <h1 class="text-[50px] text-[#88BBD8] font-bold">02</h1>
+                    <p class="font-bold">Инновационный бизнес</p>
+                    <p class="lg:w-70">Для уже работающего технологического бизнес, позволим найти новые международне
+                        рынки сбыта, масштабировать бизнес</p>
+                </div>
+            </div>
+
+            <div class="border-2 border-gray-200 w-fit text-center p-5 flex flex-col gap-3">
+                <h1 class="text-[50px] text-[#88BBD8] font-bold">03</h1>
+                <p class="font-bold">Корпорации</p>
+                <p class="lg:w-70">Для уже работающего технологического бизнес, позволим найти новые международне рынки
+                    сбыта, масштабировать бизнес</p>
             </div>
         </div>
     </div>
