--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
             </div>
         </div>
     </div>
+
+    <div class="bg-[url(bg3.png)] md:h-120 lg:h-151 h-160 bg-no-repeat bg-cover">
+        <div class="max-w-300 m-auto w-[90%] text-white  text-center pt-50 flex flex-col gap-5">
+            <h1 class="lg:text-[50px] text-[30px]  bg-[#07AF91] ">Научитесь исследовать иностранные рынки и откройте новые возможности для своего бизнеса</h1>
+
+            <p>Наша команда поможет вам изучить рынки Ближнего Востока, Азии, Латинской Америки и Африки</p>
+
+            <div><button class="bg-[#5AB0E0] py-3 px-10 rounded-sm">Получить консультацию</button></div>
+        </div>
+    </div>
 </body>
 
 </html>
