--- a/index.html
+++ b/index.html
@@ -126,11 +126,84 @@
 
     <div class="bg-[url(bg3.png)] md:h-120 lg:h-151 h-160 bg-no-repeat bg-cover">
         <div class="max-w-300 m-auto w-[90%] text-white  text-center pt-50 flex flex-col gap-5">
-            <h1 class="lg:text-[50px] text-[30px]  bg-[#07AF91] ">Научитесь исследовать иностранные рынки и откройте новые возможности для своего бизнеса</h1>
+            <h1 class="lg:text-[50px] text-[30px]  bg-[#07AF91] ">Научитесь исследовать иностранные рынки и откройте
+                новые возможности для своего бизнеса</h1>
 
             <p>Наша команда поможет вам изучить рынки Ближнего Востока, Азии, Латинской Америки и Африки</p>
 
             <div><button class="bg-[#5AB0E0] py-3 px-10 rounded-sm">Получить консультацию</button></div>
+        </div>
+    </div>
+
+    <div class="max-w-300 m-auto w-[90%]">
+        <div>
+            <h1 class="text-[50px] text-[#1178B2] py-15">С какими рынками мы работаем?</h1>
+        </div>
+
+        <div class="flex text-center items-center">
+            <p class="bg-[#88BBD8] text-white w-fit py-5 lg:px-20 md:px-10 rounded-sm">Ближний восток</p>
+            <p class="bg-[#EEF1F4] w-fit md:py-5 lg:py-5 py-8 lg:px-30 md:px-10 px-5 border-r-2 border-[#b6b6b680]">Азия</p>
+            <p class="bg-[#EEF1F4] w-fit py-5 lg:px-20 border-r-2 md:px-10 border-[#a9a9a980]">Латинская Америка</p>
+            <p class="bg-[#EEF1F4] w-fit md:py-5 lg:py-5 py-8 lg:px-30 md:px-10 px-5 rounded-sm">Африка</p>
+        </div>
+
+        <div class="bg-[url(bg4.png)] h-100 bg-no-repeat mt-10 md:flex md:flex-row lg:flex lg:flex-row flex flex-col justify-between">
+
+            <div class="flex flex-col gap-6">
+                <h1 class="text-[40px] lg:w-80 font-bold">Чем интересен <span class="text-[#07AF91]">Рынок MENA:</span>
+                </h1>
+
+                <p class="lg:w-80">ОАЭ, Саудовская Аравия, Израиль, Оман, Бахрейн, Катар, Тунис, Йемен, Египет, Алжир
+                </p>
+
+                <div class="lg:block hidden"><button
+                        class="bg-[#147AB4] py-4 px-15 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
+
+                <div class="flex items-center gap-3">
+                    <div><img src="./src/Ellipse 527.png" alt=""></div>
+                    <div class="">
+                        <p class="font-bold">Фатима </p>
+                        <p class="text-[gray]">Менеджер по MENA</p>
+                    </div>
+
+                    
+                </div>
+                <div class="lg:hidden md:block hidden"><button class="bg-[#147AB4] py-4 px-15 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
+            </div>
+
+            <div class="flex flex-col  gap-5 justify-center m-auto text-center mt-7">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+
+                    <div class="border-2 bg-white border-gray-300 w-fit md:py-3 md:px-5 py-5 px-10 text-center rounded-sm">
+                        <h1 class="text-[#88BBD8] font-bold md:text-[30px] text-[50px]  lg:text-[50px]">>5,5 <span class="md:text-[20px] text-[30px]">Млрд</span></h1>
+                        <p>Инвестиции pre-seed, seed</p>
+                    </div>
+
+                    <div class="border-2 bg-white border-gray-300 w-fit py-5 md:py-3 md:px-3 px-9 text-center rounded-sm">
+                        <h1 class="text-[#88BBD8] font-bold md:text-[30px] text-[50px] lg:text-[50px]">>300</h1>
+                        <p>Акселераторов, инкубаторов</p>
+                    </div>
+                </div>
+
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <div class="border-2 bg-white border-gray-300 w-fit md:py-3 md:px-10 py-5 lg:px-13 px-20 text-center rounded-sm">
+                        <h1 class="text-[#88BBD8] font-bold md:text-[30px] text-[50px] lg:text-[50px]">73</h1>
+                        <p>Венчурных фонда</p>
+                    </div>
+
+                    <div class="bg-[#1178B2] w-fit text-white md:py-3 md:px-15 py-5 px-22 lg:px-22 rounded-sm text-center flex flex-col gap-3">
+                        <div class="flex justify-center"><img src="./src/Group 661.png" alt=""></div>
+                        <div>
+                            <p class="md:text-[10px] lg:text-[10px]">Скачать отчет</p>
+                            <p class="md:text-[10px] lg:text-[10px]">по рынку MENA</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lg:hidden md:hidden block"><button
+                        class="bg-[#147AB4] py-4 px-20 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
+
+            </div>
         </div>
     </div>
 </body>
