--- a/index.html
+++ b/index.html
@@ -200,10 +200,40 @@
                     </div>
                 </div>
 
-                <div class="lg:hidden md:hidden block"><button
-                        class="bg-[#147AB4] py-4 px-20 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
+                <div class="lg:hidden md:hidden block"><button class="bg-[#147AB4] py-4 px-20 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
 
             </div>
+        </div>
+    </div>
+
+    <div class="max-w-300 m-auto w-[90%] mt-170 md:mt-20 lg:mt-20 lg:text-start text-center">
+        <h1 class="text-[#1178B2] text-[30px] lg:text-[50px]">Об акселераторе IT бизнеса</h1>
+        <p class="">Программа акселератора расчитана на 8 недель интенсивного онлайн  курса с вебинарами приглашенных экспертов по международным рынкам, разборами ваших идей и проектов </p>
+
+        <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col md:gap-5 lg:gap-10 gap-10 justify-center mt-10">
+            <div class="border-2 border-gray-300 w-fit py-10 px-20 rounded-sm flex md:flex-col lg:flex-col items-center gap-3">
+                <div><img src="./src/3.png" alt=""></div>
+                <p class="font-bold">Месяца обучения</p>
+            </div>
+
+             <div class="border-2 border-gray-300 w-fit py-10 px-13 rounded-sm flex md:flex-col lg:flex-col items-center gap-3">
+                <div><img src="./src/Vector (32).png" alt=""></div>
+                <p class="font-bold">Приглашенные эксперты</p>
+            </div>
+
+            <div class="border-2 border-gray-300 w-fit py-12 px-13 rounded-sm flex md:flex-col lg:flex-col items-center gap-5">
+                <div><img src="./src/Vector (33).png" alt=""></div>
+                <p class="font-bold">Персональный менеджер</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="max-w-300 m-auto w-[90%] mt-5">
+        <div class="bg-black lg:h-150 h-100 md:h-100 flex flex-col justify-center text-center">
+            <div class="lg:mt-50 mt-10 md:mt-20"><h1 class="lg:text-[50px] text-[30px] text-white">Об акселерационной программе</h1></div>
+
+            <div class="m-auto"><img src="./src/Group 839.png" alt=""></div>
         </div>
     </div>
 </body>
