--- a/index.html
+++ b/index.html
@@ -142,12 +142,14 @@
 
         <div class="flex text-center items-center">
             <p class="bg-[#88BBD8] text-white w-fit py-5 lg:px-20 md:px-10 rounded-sm">Ближний восток</p>
-            <p class="bg-[#EEF1F4] w-fit md:py-5 lg:py-5 py-8 lg:px-30 md:px-10 px-5 border-r-2 border-[#b6b6b680]">Азия</p>
+            <p class="bg-[#EEF1F4] w-fit md:py-5 lg:py-5 py-8 lg:px-30 md:px-10 px-5 border-r-2 border-[#b6b6b680]">Азия
+            </p>
             <p class="bg-[#EEF1F4] w-fit py-5 lg:px-20 border-r-2 md:px-10 border-[#a9a9a980]">Латинская Америка</p>
             <p class="bg-[#EEF1F4] w-fit md:py-5 lg:py-5 py-8 lg:px-30 md:px-10 px-5 rounded-sm">Африка</p>
         </div>
 
-        <div class="bg-[url(bg4.png)] h-100 bg-no-repeat mt-10 md:flex md:flex-row lg:flex lg:flex-row flex flex-col justify-between">
+        <div
+            class="bg-[url(bg4.png)] h-100 bg-no-repeat mt-10 md:flex md:flex-row lg:flex lg:flex-row flex flex-col justify-between">
 
             <div class="flex flex-col gap-6">
                 <h1 class="text-[40px] lg:w-80 font-bold">Чем интересен <span class="text-[#07AF91]">Рынок MENA:</span>
@@ -166,32 +168,38 @@
                         <p class="text-[gray]">Менеджер по MENA</p>
                     </div>
 
-                    
+
                 </div>
-                <div class="lg:hidden md:block hidden"><button class="bg-[#147AB4] py-4 px-15 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
+                <div class="lg:hidden md:block hidden"><button
+                        class="bg-[#147AB4] py-4 px-15 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
             </div>
 
             <div class="flex flex-col  gap-5 justify-center m-auto text-center mt-7">
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
 
-                    <div class="border-2 bg-white border-gray-300 w-fit md:py-3 md:px-5 py-5 px-10 text-center rounded-sm">
-                        <h1 class="text-[#88BBD8] font-bold md:text-[30px] text-[50px]  lg:text-[50px]">>5,5 <span class="md:text-[20px] text-[30px]">Млрд</span></h1>
+                    <div
+                        class="border-2 bg-white border-gray-300 w-fit md:py-3 md:px-5 py-5 px-10 text-center rounded-sm">
+                        <h1 class="text-[#88BBD8] font-bold md:text-[30px] text-[50px]  lg:text-[50px]">>5,5 <span
+                                class="md:text-[20px] text-[30px]">Млрд</span></h1>
                         <p>Инвестиции pre-seed, seed</p>
                     </div>
 
-                    <div class="border-2 bg-white border-gray-300 w-fit py-5 md:py-3 md:px-3 px-9 text-center rounded-sm">
+                    <div
+                        class="border-2 bg-white border-gray-300 w-fit py-5 md:py-3 md:px-3 px-9 text-center rounded-sm">
                         <h1 class="text-[#88BBD8] font-bold md:text-[30px] text-[50px] lg:text-[50px]">>300</h1>
                         <p>Акселераторов, инкубаторов</p>
                     </div>
                 </div>
 
                 <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
-                    <div class="border-2 bg-white border-gray-300 w-fit md:py-3 md:px-10 py-5 lg:px-13 px-20 text-center rounded-sm">
+                    <div
+                        class="border-2 bg-white border-gray-300 w-fit md:py-3 md:px-10 py-5 lg:px-13 px-20 text-center rounded-sm">
                         <h1 class="text-[#88BBD8] font-bold md:text-[30px] text-[50px] lg:text-[50px]">73</h1>
                         <p>Венчурных фонда</p>
                     </div>
 
-                    <div class="bg-[#1178B2] w-fit text-white md:py-3 md:px-15 py-5 px-22 lg:px-22 rounded-sm text-center flex flex-col gap-3">
+                    <div
+                        class="bg-[#1178B2] w-fit text-white md:py-3 md:px-15 py-5 px-22 lg:px-22 rounded-sm text-center flex flex-col gap-3">
                         <div class="flex justify-center"><img src="./src/Group 661.png" alt=""></div>
                         <div>
                             <p class="md:text-[10px] lg:text-[10px]">Скачать отчет</p>
@@ -200,7 +208,8 @@
                     </div>
                 </div>
 
-                <div class="lg:hidden md:hidden block"><button class="bg-[#147AB4] py-4 px-20 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
+                <div class="lg:hidden md:hidden block"><button
+                        class="bg-[#147AB4] py-4 px-20 text-white font-bold  rounded-sm">Выйти на рынок</button></div>
 
             </div>
         </div>
@@ -208,20 +217,25 @@
 
     <div class="max-w-300 m-auto w-[90%] mt-170 md:mt-20 lg:mt-20 lg:text-start text-center">
         <h1 class="text-[#1178B2] text-[30px] lg:text-[50px]">Об акселераторе IT бизнеса</h1>
-        <p class="">Программа акселератора расчитана на 8 недель интенсивного онлайн  курса с вебинарами приглашенных экспертов по международным рынкам, разборами ваших идей и проектов </p>
+        <p class="">Программа акселератора расчитана на 8 недель интенсивного онлайн курса с вебинарами приглашенных
+            экспертов по международным рынкам, разборами ваших идей и проектов </p>
 
-        <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col md:gap-5 lg:gap-10 gap-10 justify-center mt-10">
-            <div class="border-2 border-gray-300 w-fit py-10 px-20 rounded-sm flex md:flex-col lg:flex-col items-center gap-3">
+        <div
+            class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col md:gap-5 lg:gap-10 gap-10 justify-center mt-10">
+            <div
+                class="border-2 border-gray-300 w-fit py-10 px-20 rounded-sm flex md:flex-col lg:flex-col items-center gap-3">
                 <div><img src="./src/3.png" alt=""></div>
                 <p class="font-bold">Месяца обучения</p>
             </div>
 
-             <div class="border-2 border-gray-300 w-fit py-10 px-13 rounded-sm flex md:flex-col lg:flex-col items-center gap-3">
+            <div
+                class="border-2 border-gray-300 w-fit py-10 px-13 rounded-sm flex md:flex-col lg:flex-col items-center gap-3">
                 <div><img src="./src/Vector (32).png" alt=""></div>
                 <p class="font-bold">Приглашенные эксперты</p>
             </div>
 
-            <div class="border-2 border-gray-300 w-fit py-12 px-13 rounded-sm flex md:flex-col lg:flex-col items-center gap-5">
+            <div
+                class="border-2 border-gray-300 w-fit py-12 px-13 rounded-sm flex md:flex-col lg:flex-col items-center gap-5">
                 <div><img src="./src/Vector (33).png" alt=""></div>
                 <p class="font-bold">Персональный менеджер</p>
             </div>
@@ -231,9 +245,103 @@
 
     <div class="max-w-300 m-auto w-[90%] mt-5">
         <div class="bg-black lg:h-150 h-100 md:h-100 flex flex-col justify-center text-center">
-            <div class="lg:mt-50 mt-10 md:mt-20"><h1 class="lg:text-[50px] text-[30px] text-white">Об акселерационной программе</h1></div>
+            <div class="lg:mt-50 mt-10 md:mt-20">
+                <h1 class="lg:text-[50px] text-[30px] text-white">Об акселерационной программе</h1>
+            </div>
 
             <div class="m-auto"><img src="./src/Group 839.png" alt=""></div>
+        </div>
+    </div>
+
+    <div class="max-w-300 m-auto w-[90%] mt-20">
+        <h1 class="text-[50px] text-[#1178B2]">Программа акселератора</h1>
+
+        <div class="flex flex-col gap-5">
+            <div class="border-2 border-gray-300 rounded-sm py-5 px-10 mt-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row lg:text-start text-center flex flex-col  justify-between items-center border-b-2 border-gray-300 pb-5">
+                    <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                        <h1 class="text-[#3881C6] font-bold">Модуль 1</h1>
+                        <p class="font-bold">Тенденции и тренды современного мира</p>
+                    </div>
+                    <div><img src="./src/Group 667.png" alt=""></div>
+                </div>
+                <p class="text-[gray] py-5 border-b-2 border-gray-300">Тема 1. Куда движутся IT тренды? Аналитика
+                    Gartner, разбор отчетов консалтинговых компаний</p>
+                <p class="text-[gray] py-5 border-b-2 border-gray-300">Тема 2. Рынки Ближнего Востока, Азии, Латинской
+                    АмерикиТема</p>
+                <p class="text-[gray] py-5 border-b-2 border-gray-300"> 3. Что такое внутренние и внешние инновации? Как
+                    искать инновационные идеи?</p>
+                <p class="py-5 text-[#3881C6]">9 видео роликов, вебинар с приглашенным экспертом</p>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 2</h1>
+                    <p class="font-bold">Стартап подход к созданию международного IT продукта</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 3</h1>
+                    <p class="font-bold">Бизнес моделирование и поиск Product Market Fit</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 4</h1>
+                    <p class="font-bold md:w-100 md:flex md:items-center lg:w-auto">Определение рынка, поиск и исследование Целевой аудитории</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 5</h1>
+                    <p class="font-bold">Что такое MVP и почему это важно</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 6</h1>
+                    <p class="font-bold">Unit экономика и финансовое моделирование</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 7</h1>
+                    <p class="font-bold">Что такое дорожная карта продукта?</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 8</h1>
+                    <p class="font-bold">Документы дя международных инвесторов</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col gap-5">
+                    <h1 class="text-[#3881C6] font-bold">Модуль 9</h1>
+                    <p class="font-bold md:w-100 md:flex md:items-center lg:w-auto">Открытие юридического лица. Возможности для стартапов</p>
+                </div>
+                <div><img src="./src/Group 1017.png " alt=""></div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col lg:text-start text-center lg:gap-0 gap-3 justify-between items-center border-2 border-gray-300 py-3 rounded-sm px-10">
+                <h1 class="text-[#3881C6] font-bold">Демо день </h1>
+                <div class="lg:hidden md:hidden block"><img src="./src/Group 1017.png " alt=""></div>
+            </div>
         </div>
     </div>
 </body>
