--- a/index.html
+++ b/index.html
@@ -344,6 +344,31 @@
             </div>
         </div>
     </div>
+
+    <div class="bg-[url(bg5.png)] h-160 md:h-170 lg:h-120 mt-20 bg-no-repeat bg-cover">
+        <div class="max-w-300 m-auto w-[90%] text-white lg:flex lg:flex-row flex flex-col lg:gap-0 gap-5 lg:justify-between lg:text-start text-center items-center py-5">
+
+            <div class="flex flex-col gap-5">
+                <h1 class="lg:text-[40px] text-[30px] lg:w-150">Попадите на радары инвесторов и партнеров</h1>
+                <p class="lg:w-100">В результате прохождения обучения мы создадим профили вашей компании на всех международных скаутинговых площадках</p>
+                <div><button class="bg-[#07AF91] py-3 px-20 rounded-sm">Записаться в акселератор</button></div>
+            </div>
+
+            <div class="flex">
+                <div>
+                    <div><img src="./src/Group 714.png" alt=""></div>
+                    <div><img src="./src/Group 715.png" alt=""></div>
+                    <div><img src="./src/Group 717.png" alt=""></div>
+                </div>
+
+                <div>
+                    <div><img src="./src/Group 713.png" alt=""></div>
+                    <div><img src="./src/Group 716.png" alt=""></div>
+                    <div><img src="./src/Group 718.png" alt=""></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
