--- a/index.html
+++ b/index.html
@@ -369,6 +369,52 @@
             </div>
         </div>
     </div>
+
+    <div class="max-w-300 m-auto w-[90%]">
+        <h1 class="lg:text-[50px] text-[30px] lg:text-start text-center py-10 text-[#1178B2] font-bold">Что вы получите в результате?</h1>
+
+        <div class="flex flex-col gap-3">
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col justify-between lg:gap-0 gap-3">
+                <div class="border-2 border-gray-300 w-fit py-5 px-15 md:px-10 text-center flex flex-col gap-3">
+                    <h1 class="text-[#88BBD8] text-[50px] font-bold">01</h1>
+                    <p class="font-bold">Документы по продукту</p>
+                    <p class="lg:w-70">Бизнес план, отчет по анализу рынка, маркетинговый план, unit экономика, список гипотез, проект MVP</p>
+                </div>
+
+                <div class="border-2 border-gray-300 w-fit py-5 px-15 md:px-10 text-center flex flex-col gap-3">
+                    <h1 class="text-[#88BBD8] text-[50px] font-bold">02</h1>
+                    <p class="font-bold">Обратная связь от рынка</p>
+                    <p class="lg:w-70">Проведение исследования целевой аудитории позволит сформировать Product market fit</p>
+                </div>
+
+                <div class="border-2 border-gray-300 w-fit py-5 px-15 md:px-10 text-center flex flex-col gap-3">
+                    <h1 class="text-[#88BBD8] text-[50px] font-bold">03</h1>
+                    <p class="font-bold">Продвижение продукта</p>
+                    <p class="lg:w-70">Продвижение продукта через аналитические системы партнеров</p>
+                </div>
+            </div>
+
+            <div class="lg:flex lg:flex-row md:flex md:flex-row flex flex-col justify-between lg:gap-0 gap-3">
+                <div class="border-2 border-gray-300 w-fit py-5 px-15 lg:px-10 md:px-8 text-center flex flex-col gap-3">
+                    <h1 class="text-[#88BBD8] text-[50px] font-bold">04</h1>
+                    <p class="font-bold">Подписка на отчеты</p>
+                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер</p>
+                </div>
+
+                <div class="border-2 border-gray-300 w-fit py-5 px-15 lg:px-10 md:px-8 text-center flex flex-col gap-3">
+                    <h1 class="text-[#88BBD8] text-[50px] font-bold">05</h1>
+                    <p class="font-bold">Подписка на отчеты</p>
+                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер</p>
+                </div>
+
+                <div class="border-2 border-gray-300 w-fit py-5 px-15 lg:px-10 md:px-4 text-center flex flex-col gap-3">
+                    <h1 class="text-[#88BBD8] text-[50px] font-bold">06</h1>
+                    <p class="font-bold">Подписка на отчеты</p>
+                    <p class="lg:w-70">Подписка на аналитические отчеты по международным рынкам высокотехнологичных сфер</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
